-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: openjdk8u-jfr-incubator
-
Component/s: hotspot
-
team
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243840 | openjdk8u262 | Mario Torre | P3 | Resolved | Fixed | b01 |
On behalf of Dong Denghui from Alibaba.
A patch will soon be submitted to mailing list, which includes fixes for following testcase failures:
jdk/jfr/event/compiler/TestCodeCacheConfig.java
jdk/jfr/event/compiler/TestCodeSweeper.java
jdk/jfr/event/compiler/TestCodeCacheFull.java
A patch will soon be submitted to mailing list, which includes fixes for following testcase failures:
jdk/jfr/event/compiler/TestCodeCacheConfig.java
jdk/jfr/event/compiler/TestCodeSweeper.java
jdk/jfr/event/compiler/TestCodeCacheFull.java
- backported by
-
JDK-8243840 Fix JFR code cache test failures
-
- Resolved
-
- relates to
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-