8229401: Fix JFR code cache test failures 8223689: Add JFR Thread Sampling Support 8223690: Add JFR BiasedLock Event Support 8223691: Add JFR G1 Region Type Change Event Support 8223692: Add JFR G1 Heap Summary Event Support

Backport JFR from JDK11, additional fixes

Reviewed-by: neugens, apetushkov